Adding all API endpoints finished
