# manage_ecommerce_api_doc.yml
@@ -9,65 +9,67 @@ info:
   title: E-Commerce Cargamos API Manager
   description: |
     </br>
-    API to Manage Van vehicles to Urbvan.
+    API to Manage E-Commerce Products/Stores.
     CRUD functions can be applied to manage the data.
     </br>
     </br>
   contact: 
       name: API Support
-      url: https://github.com/jorgeMorfinezM/urbvan_test_microservice/blob/main/README.md
+      url: https://github.com/jorgeMorfinezM/cargamos_api_test/blob/main/README.md
       email: jorge.morfinez.m@gmail.com
-  termsOfService: https://www.ofix.com.mx/conditionsofuse
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   
 host:
-  localhost:5000
-basePath: "/api/urbvan"
+  cargamos-api-test.herokuapp.com
+basePath: "/api/ecommerce"
 schemes:
-  - http
   - https
 consumes:
   - application/json
 produces:
   - application/json
-# components:
-#    securitySchemes:
-#    bearerAuth:            # arbitrary name for the security scheme
-#      type: http
-#      scheme: bearer
-#      bearerFormat: JWT 
+components:
+    securitySchemes:
+    bearerAuth:
+      type: https
+      scheme: bearer
+      bearerFormat: JWT
 securityDefinitions:
   OAuth2:
-    description: Contiene la llamada a autenticar la API para obtener el Bearer Token 
+    description: Contiene la llamada a autenticar la API para obtener el Bearer Token
     type: oauth2
     flow: accessCode
-    authorizationUrl: http://localhost:5000/api/urbvan/authorization/
-    tokenUrl: http://127.0.0.1:5000/api/urbvan/authorization/
-    
+    authorizationUrl: https://cargamos-api-test.herokuapp.com/api/ecommerce/authorization/
+    tokenUrl: https://cargamos-api-test.herokuapp.com/api/ecommerce/authorization/
+
 # Describe your paths here
-tags: 
-  - name: "Search Van by Status"
-    description: "Endpoint to looking for Van data by status defined"
-  - name: "Manage Van"
-    description: "Endpoint to manage Van data using: add, search, get, delete and update methods to and from the database"
+tags:
+  - name: "Search Stock by Product and Store"
+    description: "Endpoint to looking for stock data by sku and code store defined"
+  - name: "Search Total Stock by Product"
+    description: "Endpoint to looking for stock data by sku defined"
+  - name: "Add Stock by Product"
+    description: "Update stock in product by SKU and Store Code"
+  - name: "Manage Stores"
+    description: "Endpoint to manage Store data using: add, search, get, delete and update methods to and from the database"
   - name: "Authorization"
     description: "Endpoint to get Token Bearer POST the username and password registered"
 paths:
-  /vehicle/van/status/:
+  /stock/detail/:
     get:
       tags:
-        - "Search Van by Status"
+        - "Search Stock by Product and Store"
       description:
-        Get the list of Van vehicles looking for by Status.
+        Get the data of stock looking for by Product and Store.
       parameters:
-        - name: SearchStatus
+        - name: SearchStock
           in: body
-          description: Payload get the list of the Vans by valid status looking for.
+          description: Payload get the list of the Stock by SKU and Store Code.
           required: true
           schema:
-            $ref: '#/definitions/SearchStatus'
+            $ref: '#/definitions/SearchStock'
       responses:
         # Response code
         200:
@@ -77,7 +79,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/VanVehicle'
+              $ref: '#/definitions/ProductStock'
         404:
           description: Page Not Found
         default:
@@ -103,21 +105,117 @@ paths:
             items:
               $ref: '#/definitions/Error'
 
-  /vehicle/van/:
+  /stock/total/:
+    get:
+      tags:
+        - "Search Total Stock by Product"
+      description:
+        Get the data of stock in all Stores by SKU.
+      parameters:
+        - name: SearchTotalStock
+          in: body
+          description: Payload get the list of all stocks the product.
+          required: true
+          schema:
+            $ref: '#/definitions/SearchTotalStock'
+      responses:
+        # Response code
+        200:
+          description: Successful response
+          # A schema describing your response object.
+          # Use JSON Schema format
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/ProductStock'
+        404:
+          description: Page Not Found
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        409:
+          description: Request Data Conflict
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        401:
+          description: 401 Unauthorized
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        500:
+          description: Server Error
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+
+  /stock/add/:
+    get:
+      tags:
+        - "Add Stock by Product"
+      description:
+        Get the data of stock in all Stores by SKU.
+      parameters:
+        - name: AddStock
+          in: body
+          description: Payload get the list of all stocks the product.
+          required: true
+          schema:
+            $ref: '#/definitions/AddStock'
+      responses:
+        # Response code
+        200:
+          description: Successful response
+          # A schema describing your response object.
+          # Use JSON Schema format
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/StockAdded'
+        404:
+          description: Page Not Found
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+        409:
+          description: Request Data Conflict
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        401:
+          description: 401 Unauthorized
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+        500:
+          description: Server Error
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Error'
+
+  /manage/store/:
     # This is a HTTP operation
     get:
       tags:
-        - "Manage Van"
+        - "Manage Stores"
       description:
-        Get the Van data from Van UUID.
+        Get the Store data from code.
       # This is array of GET operation parameters:
       parameters:
-        - name: SearchVanId
+        - name: SearchStoreCode
           in: body
-          description: Payload to get the data of a Van by UUID.
+          description: Payload to get the data of a Store data by Code.
           required: true
           schema:
-            $ref: '#/definitions/SearchVanId'
+            $ref: '#/definitions/SearchStoreCode'
       # Expected responses for this operation:
       responses:
         # Response code
@@ -128,7 +226,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/VanVehicle'
+              $ref: '#/definitions/StoreData'
         404:
           description: Page Not Found
         default:
@@ -155,16 +253,16 @@ paths:
               $ref: '#/definitions/Error'
     post:
       tags:
-        - "Manage Van"
+        - "Manage Stores"
       description:
-        Add Van vaslid data to register a new Van.
+        Add Store data to register a new Store.
       parameters:
-        - name: postVan
+        - name: postStore
           in: body
-          description: Payload to insert a Van record in database.
+          description: Payload to insert a store record in database.
           required: true
           schema:
-            $ref: '#/definitions/postVan'
+            $ref: '#/definitions/postStore'
       responses:
         # Response code
         200:
@@ -172,7 +270,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/PostVanResponse'
+              $ref: '#/definitions/PostStoreResponse'
         404:
           description: Page Not Found
         default:
@@ -199,16 +297,16 @@ paths:
               $ref: '#/definitions/Error'
     put:
       tags:
-        - "Manage Van"
+        - "Manage Stores"
       description:
-        Updates the Van data of a particular record in the database.
+        Updates the Store data of a particular record in the database.
       parameters:
-        - name: putVan
+        - name: putStore
           in: body
-          description: Payload to update Van valid data.
+          description: Payload to update store valid data.
           required: true
           schema:
-            $ref: '#/definitions/putVan'
+            $ref: '#/definitions/putStore'
       responses:
         # Response code
         200:
@@ -218,7 +316,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/putVanResponse'
+              $ref: '#/definitions/PutStoreResponse'
         404:
           description: Page Not Found
         default:
@@ -245,16 +343,16 @@ paths:
               $ref: '#/definitions/Error'
     delete:
       tags:
-        - "Manage Van"
+        - "Manage Stores"
       description:
-        Deletes a record of a Van from the database.
+        Deletes a record of a Store from the database.
       parameters:
-        - name: deleteVan
+        - name: deleteStore
           in: body
           description: Payload to looking for and delete a specific record.
           required: true
           schema:
-            $ref: '#/definitions/deleteVan'
+            $ref: '#/definitions/deleteStore'
       responses:
         # Response code
         200:
@@ -335,166 +433,243 @@ paths:
               $ref: '#/definitions/Error'
 
 definitions:
-  SearchStatus:
+  SearchStock:
     allOf:
-      - $ref: '#/definitions/SearchStatus'
+      - $ref: '#/definitions/SearchStock'
       - required:
-          - statusVan
+          - product_sku
+          - store_code
         type: "object"
         properties:
-          StatusVan:
+          product_sku:
+            type: string
+          store_code:
             type: string
 
-  VanVehicle:
+  ProductStock:
     allOf:
-      - $ref: '#/definitions/VanVehicle'
+      - $ref: '#/definitions/ProductStock'
       - required:
-          - UUID
-          - Plate
-          - EconomicNumber
-          - SeatsNumber
-          - Status
-          - CreationDate
-          - LastUpdateDate
+          - CodeStore
+          - NameStore
+          - SKU
+          - Stock
         type: "object"
         properties:
-          UUID:
+          CodeStore:
             type: string
-          Plate:
+          NameStore:
             type: string
-          EconomicNumber:
+          SKU:
             type: string
-          SeatsNumber:
-            type: string
-          Status:
-            type: string
-          CreationDate:
-            type: string
-          LastUpdateDate:
-            type: string
-
-  SearchVanId:
-    allOf:
-      - $ref: '#/definitions/SearchVanId'
-      - required:
-        - uuid_van
-        type: "object"
-        properties:
-          uuid_van:
-            type: string
-            format: string
-
-  postVan:
-    allOf:
-      - $ref: '#/definitions/postVan'
-      - required:
-          - plate_van
-          - economic_number
-          - seats_number
-          - status
-        type: "object"
-        properties:
-          plate_van:
-            type: string
-          economic_number:
-            type: string
-          seats_number:
+          Stock:
             type: integer
             format: int64
-          status:
+
+  SearchTotalStock:
+    allOf:
+      - $ref: '#/definitions/SearchTotalStock'
+      - required:
+          - product_sku
+        type: "object"
+        properties:
+          product_sku:
             type: string
 
-  PostVanResponse:
+  AddStock:
     allOf:
-      - $ref: '#/definitions/PostVanResponse'
+      - $ref: '#/definitions/AddStock'
       - required:
-          - UUID
-          - Plate
-          - EconomicNumber
-          - SeatsNumber
-          - Status
+          - product_sku
+          - store_code
+          - stock
+        type: "object"
+        properties:
+          product_sku:
+            type: string
+          store_code:
+            type: string
+          stock:
+            type: integer
+            format: int64
+
+  StockAdded:
+    allOf:
+      - $ref: '#/definitions/StockAdded'
+      - required:
+          - StoreCode
+          - ProductSku
+          - ProductStock
+          - LastUpdateDate
+          - Message
+        type: "object"
+        properties:
+          StoreCode:
+            type: string
+          ProductSku:
+            type: string
+          ProductStock:
+            type: integer
+            format: int64
+          LastUpdateDate:
+            type: string
+          Message:
+            type: string
+
+  SearchStoreCode:
+    allOf:
+      - $ref: '#/definitions/SearchStoreCode'
+      - required:
+          - store_code
+        type: "object"
+        properties:
+          store_code:
+            type: string
+
+  StoreData:
+    allOf:
+        - $ref: '#/definitions/StoreData'
+        - required:
+            - store_code
+          type: "object"
+          properties:
+            store_code:
+              type: string
+
+  postStore:
+    allOf:
+      - $ref: '#/definitions/postStore'
+      - required:
+          - store_code
+          - store_name
+          - street_address
+          - external_number_address
+          - suburb_address
+          - city_address
+          - country_address
+          - zip_postal_code_address
+          - minimum_inventory
+        type: "object"
+        properties:
+          store_code:
+            type: string
+          store_name:
+            type: string
+          street_address:
+            type: string
+          external_number_address:
+            type: string
+          suburb_address:
+            type: string
+          city_address:
+            type: string
+          country_address:
+            type: string
+          zip_postal_code_address:
+            type: string
+          minimum_inventory:
+            type: integer
+            format: int64
+
+  PostStoreResponse:
+    allOf:
+      - $ref: '#/definitions/PostStoreResponse'
+      - required:
+          - IdStore
+          - CodeStore
+          - NameStore
+          - AddressStore
+          - MinimumStock
           - CreationDate
           - Message
         type: "object"
         properties:
-          UUID:
+          IdStore:
             type: string
-          Plate:
+          CodeStore:
             type: string
-          EconomicNumber:
+          NameStore:
             type: string
-          SeatsNumber:
+          AddressStore:
             type: string
-          Status:
+          MinimumStock:
             type: string
           CreationDate:
             type: string
           Message:
             type: string
 
-  putVan:
+  putStore:
     allOf:
-      - $ref: '#/definitions/putVan'
+      - $ref: '#/definitions/putStore'
       - required:
-          - uuid_van
-          - plate_van
-          - economic_number
-          - seats_number
-          - status
+          - store_code
+          - store_name
+          - street_address
+          - external_number_address
+          - suburb_address
+          - city_address
+          - country_address
+          - zip_postal_code_address
+          - minimum_inventory
         type: "object"
         properties:
-          uuid_van:
+          store_code:
             type: string
-          plate_van:
+          store_name:
             type: string
-          economic_number:
+          street_address:
             type: string
-          seats_number:
+          external_number_address:
+            type: string
+          suburb_address:
+            type: string
+          city_address:
+            type: string
+          country_address:
+            type: string
+          zip_postal_code_address:
+            type: string
+          minimum_inventory:
             type: integer
             format: int64
-          status:
-            type: string
 
-  putVanResponse:
+  PutStoreResponse:
     allOf:
-      - $ref: '#/definitions/putVanResponse'
+      - $ref: '#/definitions/PutStoreResponse'
       - required:
-          - UUID
-          - Plate
-          - EconomicNumber
-          - SeatsNumber
-          - Status
+          - IdStore
+          - CodeStore
+          - NameStore
+          - AddressStore
+          - MinimumStock
           - LastUpdateDate
           - Message
         type: "object"
         properties:
-          UUID:
+          IdStore:
             type: string
-          Plate:
+          CodeStore:
             type: string
-          EconomicNumber:
+          NameStore:
             type: string
-          SeatsNumber:
-            type: integer
-            format: int64
-          Status:
+          AddressStore:
+            type: string
+          MinimumStock:
             type: string
           LastUpdateDate:
             type: string
           Message:
             type: string
 
-  deleteVan:
+  deleteStore:
     allOf:
-      - $ref: '#/definitions/deleteVan'
+      - $ref: '#/definitions/deleteStore'
       - required:
-          - uuid_van
-          - plate_van
+          - store_code
         type: "object"
         properties:
-          uuid_van:
-            type: string
-          plate_van:
+          store_code:
             type: string
 
   deleteVanResponse:
@@ -512,6 +687,9 @@ definitions:
             type: string
           Message:
             type: string
+    "IdStore": store_id,
+    "CodeStore": store_code,
+    "Message"
 
   Error:
     allOf:
